syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__applies_doc_only_changes.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
/// New doc
pub fn test() {}
