syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__applies_module_doc_change.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
#![doc = syncdoc::module_doc!()]

pub fn test() {}
