syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__preserves_blank_line_between_module_and_item_docs.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
#![doc = syncdoc::module_doc!()]

#[syncdoc::omnidoc]
pub fn test() {}
