syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__restore_applies_doc_comments.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
/// Documentation
pub fn test() {}
