syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__restore_preserves_blank_line_and_correct_doc_order.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
//! Section representation for tree-sitter parsed documents.
//!
//! A section represents a hierarchical division of a document, typically
//! corresponding to a heading in markdown. Sections track their position
//! in the document tree through parent/child relationships and maintain
//! precise byte and line coordinates for content extraction and modification.

/// Hierarchical document division with precise coordinates for extraction and modification.
#[derive(Clone)]
pub struct Section {}
