syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__restore_preserves_blank_line_between_module_and_item_docs.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
//! Module doc

/// Item doc
pub fn test() {}
