syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__apply__snapshot_full_apply.snap
---
source: syncdoc-migrate/src/tests/diff/apply.rs
expression: result
---
#![doc = syncdoc::module_doc!()]

#[syncdoc::omnidoc]
#[derive(Clone)]
pub struct Section {
    pub title: String,
}

#[syncdoc::omnidoc]
#[derive(Clone)]
pub enum ChunkType {
    Added,
    Deleted,
}
